--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Menu de navegacion -->
         <nav>
             <ul>
-                <li><a href="#sobremi">Sobre tu</a></li>
+                <li><a href="#sobremi">Sobre mi</a></li>
                 <li><a href="#cualidades">Cualidades</a></li>
                 <li id="logo"> <img src="./imagenes/cascos.png" alt="logo de musica" > </li>
                 <li><a href="#experiencia">Skils</a></li>
@@ -63,7 +63,7 @@
             <!-- Bloque portfolio -->
             <section id="cualidades">
                 <h2>Cualidades</h2>
-                <h3>Just a game</h3>
+                <h3>Just a game test para joaquin 💝</h3>
                 <table>
                     <thead>
                         <tr>
