--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <!-- Bloque portfolio -->
             <section id="cualidades">
                 <h2>Cualidades</h2>
-                <h3>Just a game test para joaquin 💝</h3>
+                <h3>Just a game👾</h3>
                 <table>
                     <thead>
                         <tr>
