--- a/index.html
+++ b/index.html
@@ -64,27 +64,40 @@
             <section id="cualidades">
                 <h2>Cualidades</h2>
                 <h3>Just a game👾</h3>
-                <table>
-                    <thead>
-                        <tr>
-                            <th colspan="4">Ejemplo de portfolio</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>aprendizaje</td>
-                            <td>Mentoria</td>
-                            <td>Circulos</td>
-                            <td>Congruencia</td>
-                        </tr>
-                        <tr>
-                            <td>Siembre aprender algo nuevo</td>
-                            <td>Dejate guar y se enseñable</td>
-                            <td>Rodeate de los grandes</td>
-                            <td>Todos tenemos algo de incongruencia en cada uno de nosotros, sin embargo, ocupamos centrar nuestros esfuersos en aquellas cosas que soñamos</td>
-                        </tr>
-                    </tbody>
-                    </table>
+                <div class="filaportfolio">
+                    <div class="card">
+                        <img src="./imagenes/238683.jpg" alt="Portfolio 1">
+                        <h3>musica</h3>
+                        <h4>concierto benicassim</h4>
+                        <div class="sep"></div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <div class="masinfo"><button type="button">MAS INFO</button></div>
+                    </div>
+                    <div class="card">
+                        <img src="./imagenes/548694.jpg" alt="Portfolio 2">
+                        <h3>musica</h3>
+                        <h4>concierto benicassim</h4>
+                        <div class="sep"></div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <div class="masinfo"><button type="button">MAS INFO</button></div>
+                    </div>
+                    <div class="card">
+                        <img src="./imagenes/711093.jpg" alt="Portfolio 3">
+                        <h3>musica</h3>
+                        <h4>concierto benicassim</h4>
+                        <div class="sep"></div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <div class="masinfo"><button type="button">MAS INFO</button></div>
+                    </div>
+                    <div class="card">
+                        <img src="./imagenes/812556.jpg" alt="Portfolio 4">
+                        <h3>musica</h3>
+                        <h4>concierto benicassim</h4>
+                        <div class="sep"></div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <div class="masinfo"><button type="button">MAS INFO</button></div>
+                    </div>
+                </div>
             </section>
         </article>
         <!-- Bloque experiencia-->
@@ -110,5 +123,6 @@
         <footer>
 
         </footer>
+        
     </body>
 </html>
