--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="filaportfolio">
                     <div class="card">
                         <img src="./imagenes/238683.jpg" alt="Portfolio 1">
-                        <h3>musica</h3>
+                        <h3>Test</h3>
                         <h4>concierto benicassim</h4>
                         <div class="sep"></div>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
