--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
         <title>Fernando Leon Blog</title>
         <!-- Linkeos de importaciones -->
+        <link rel="preload" href="/fonts/GTWalsheimPro-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+        <link rel="preload" href="/fonts/GTWalsheimPro-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+        <link rel="preload" href="/fonts/GTWalsheimPro-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">        
@@ -19,7 +22,7 @@
             <ul>
                 <li><a href="#sobremi">Sobre mi</a></li>
                 <li><a href="#cualidades">Cualidades</a></li>
-                <li id="logo"> <img src="./imagenes/cascos.png" alt="logo de musica" > </li>
+                <li id="logo"><a>👾</a></li>
                 <li><a href="#experiencia">Skils</a></li>
                 <li><a href="#contactar">Contactar</a></li>
             </ul>
