--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Menu de navegacion -->
         <nav>
             <ul>
-                <li><a href="#sobremi">Sobre mi</a></li>
+                <li><a href="#aboutme">Sobre mi</a></li>
                 <li><a href="#cualidades">Cualidades</a></li>
                 <li id="logo"><a>👾</a></li>
                 <li><a href="#experiencia">Skils</a></li>
@@ -55,15 +55,15 @@
                     </li>
                 </ul>
             </section>
-            <!-- Bloque de sobremi -->
-            <section id="sobremi">
-                <div id="title">
-                    <a href="./sobremi.html"><h2>Sobre mi</h2></a>
+            <!-- Bloque de aboutme -->
+            <section id="aboutme">
+                <div id="title_aboutme">
+                    <a href="./aboutme.html"><h2>Sobre mi</h2></a>
                 </div>
-                <div id="image">
-                    <img id="img-perfil" src="./imagenes/Fer-gusanito.png" alt="Foto de alguien sonriendo">
+                <div id="image_aboutme">
+                    <img src="./imagenes/Fer-gusanito.png" alt="Foto de alguien sonriendo">
                 </div>
-                <div id="text">
+                <div id="text_aboutme">
                     <p>Soy <strong> Fernando Leon Franco</strong> un chico apasionaodo por el aprendizaje <span> por la tecología y la programación </span></p>
                     <p> Me defino como una persona con hambre de mucho aprendizaje, 
                         me gusta compartir mucho mi conocimiento y crecer en habilidades blandas junto con los que me rodean y de una manera u otra busco llegar a la vida que quiero, lo voy a hacer de una u otra manera, sin embargo me gusta respetar los limites de los demas asi que no voy a pisar la libertad de otros para alcanzar la mia.</p>    
