--- a/aboutme.html
+++ b/aboutme.html
@@ -69,6 +69,7 @@
                 </li>
             </ul>
         </section>
+        <iframe width="100%" height="800" src="https://miro.com/app/live-embed/uXjVPCewDTk=/?moveToViewport=-246,-68,743,361&embedId=560473164723" frameborder="0" scrolling="no" allowfullscreen></iframe>
         
 </body>
 </html>
