--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Fernando Leon Blog</title>
         <!-- Linkeos de importaciones -->
-        <link rel="preload" href="/fonts/GTWalsheimPro-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-        <link rel="preload" href="/fonts/GTWalsheimPro-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-        <link rel="preload" href="/fonts/GTWalsheimPro-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+        <link rel="icon" type="image/x-icon" href="/imagenes/Fer-gusanito.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">        
@@ -116,17 +114,95 @@
                 <h2>Experiencia & Skills</h2>
                 <h3>"Creo que mis años de experiencia importan, pero lo que importa es lo que he hecho con esa información"</h3>
                 <p>Realmente le he dado vueltas a las cosas en mi vida, he buscado ver si mi conocimiento me ha servido para algo, sin embargo, y para mi sorpresa si, como dice un buen amigo <cite>"Somos la iteracion del conocimiento acumulado de la historia de loa humanidad" -Joaquin Infante-</cite> y realmente tiene razón, asi que es muy facil en comparación a años atras el estudiar y poner en practica bastantes conocimientos y mas si estos los vemos como parte de algo mas grande de lo que son de una manera individual.</p>
+                <div class="gridexp">
+                    <div class="cardexp">
+                        <h2>Diseño Web</h2>
+                        <h3 class="lefttext">2018-2022</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil consectetur enim ea ducimus ipsum incidunt a doloremque et cum distinctio autem pariatur sed quae recusandae, alias expedita rerum, earum molestiae.</p>
+                        <ul>
+                            <li><img src="./imagenes/tecno_au.png" alt="" height="30px"></li>
+                            <li><img src="./imagenes/tecno_cu.png" alt="" height="30px"></li>
+                            <li><img src="./imagenes/tecno_html.png" alt="" height="30px"></li>
+                        </ul>
+                    </div>
+                    <div class="cardexp">
+                        <h2>Diseño Web</h2>
+                        <h3 class="lefttext">2018-2022</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil consectetur enim ea ducimus ipsum incidunt a doloremque et cum distinctio autem pariatur sed quae recusandae, alias expedita rerum, earum molestiae.</p>
+                        <ul>
+                            <li><img src="./imagenes/tecno_au.png" alt="" height="30px"></li>
+                            <li><img src="./imagenes/tecno_cu.png" alt="" height="30px"></li>
+                            <li><img src="./imagenes/tecno_html.png" alt="" height="30px"></li>
+                        </ul>
+                    </div>
+                    <div class="cardexp">
+                        <h2>Diseño Web</h2>
+                        <h3 class="lefttext">2018-2022</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil consectetur enim ea ducimus ipsum incidunt a doloremque et cum distinctio autem pariatur sed quae recusandae, alias expedita rerum, earum molestiae.</p>
+                        <ul>
+                            <li><img src="./imagenes/tecno_au.png" alt="" height="30px"></li>
+                            <li><img src="./imagenes/tecno_cu.png" alt="" height="30px"></li>
+                            <li><img src="./imagenes/tecno_html.png" alt="" height="30px"></li>
+                        </ul>
+                    </div>
+                    <div class="cardexp">
+                        <h2>Diseño Web</h2>
+                        <h3 class="lefttext">2018-2022</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil consectetur enim ea ducimus ipsum incidunt a doloremque et cum distinctio autem pariatur sed quae recusandae, alias expedita rerum, earum molestiae.</p>
+                        <ul>
+                            <li><img src="./imagenes/tecno_au.png" alt="" height="30px"></li>
+                            <li><img src="./imagenes/tecno_cu.png" alt="" height="30px"></li>
+                            <li><img src="./imagenes/tecno_html.png" alt="" height="30px"></li>
+                        </ul>
+                    </div>
+                    <div class="cardexp">
+                        <h2>Diseño Web</h2>
+                        <h3 class="lefttext">2018-2022</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil consectetur enim ea ducimus ipsum incidunt a doloremque et cum distinctio autem pariatur sed quae recusandae, alias expedita rerum, earum molestiae.</p>
+                        <ul>
+                            <li><img src="./imagenes/tecno_au.png" alt="" height="30px"></li>
+                            <li><img src="./imagenes/tecno_cu.png" alt="" height="30px"></li>
+                            <li><img src="./imagenes/tecno_html.png" alt="" height="30px"></li>
+                        </ul>
+                    </div>
+                    <div class="cardexp">
+                        <h2>Diseño Web</h2>
+                        <h3 class="lefttext">2018-2022</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil consectetur enim ea ducimus ipsum incidunt a doloremque et cum distinctio autem pariatur sed quae recusandae, alias expedita rerum, earum molestiae.</p>
+                        <ul>
+                            <li><img src="./imagenes/tecno_au.png" alt="" height="30px"></li>
+                            <li><img src="./imagenes/tecno_cu.png" alt="" height="30px"></li>
+                            <li><img src="./imagenes/tecno_html.png" alt="" height="30px"></li>
+                        </ul>
+                    </div>
+                </div>
             </section>
             <!-- Seccion contactar -->
-            <section id="contactar">
-                <h2>Contactar</h2>
-                
-                <ul>
-                    <li>
-                        <a href="mailto:leon@leonesfrancos.com"> leon@leonesfrancos.com</a>
-                    </li>
-                    
-                </ul>
+            <section id="contact">
+                <h2>CONTACTO</h2>
+                <div class="form">
+                    <form action="#">
+                        <div class="itemform">
+                            <label for="name">Nombre</label>
+                            <input type="text" id="name" name="name" minlength="2" maxlength="64" size="14" required>
+                        </div>
+                        <div class="itemform">
+                            <label for="empresa">Empresa</label>
+                            <input type="text" id="empresa" name="empresa" minlength="2" maxlength="128" size="14">
+                        </div>
+                        <div class="itemform">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" minlength="10" maxlength="128" size="14" required>
+                        </div>
+                        <div class="itemform">
+                            <label for="message">Mensaje</label>
+                            <textarea name="message" id="message" cols="33" rows="5"></textarea>
+                        </div>
+                        <div class="itemform">
+                            <input type="submit" name="button" value="CONTACTAR">
+                        </div>
+                    </form>
+                </div>
             </section>
             <!-- Footer -->
             <footer>
