--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
                     <h3>Just a game👾</h3>
                     <div class="filaportfolio">
                         <div class="card">
-                            <img src="./imagenes/238683.jpg" alt="Portfolio 1">
+                            <video controls width="250">
+                                <source src="./media/portfolio_media_intro_mastermindv2.webm" type="video/webm">
+                                <source src="./media/intro_mastermindv2.mp4" type="video/mp4">
+                            </video>
                             <h3>Test</h3>
                             <h4>concierto benicassim</h4>
                             <div class="sep"></div>
@@ -83,7 +86,7 @@
                         </div>
                         <div class="card">
                             
-                            <img src="./imagenes/548694.jpg" alt="Portfolio 2">
+                            <iframe width="250" src="https://www.youtube.com/embed/p8P6HR7tucE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <h3>musica</h3>
                             <h4>concierto benicassim</h4>
                             <div class="sep"></div>
