--- a/index.html
+++ b/index.html
@@ -74,15 +74,13 @@
                     <h3>Just a game👾</h3>
                     <div class="filaportfolio">
                         <div class="card">
-                            <video controls width="250">
-                                <source src="./media/portfolio_media_intro_mastermindv2.webm" type="video/webm">
-                                <source src="./media/intro_mastermindv2.mp4" type="video/mp4">
-                            </video>
-                            <h3>Test</h3>
-                            <h4>concierto benicassim</h4>
+                            <img src="./imagenes/giphy (1).gif" alt="">
+                            <h3>Protecto N</h3>
+                            <h4>Aprende Javascript ES9, HTML, CSS3 y NodeJS desde cero</h4>
                             <div class="sep"></div>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                            <div class="masinfo"><button type="button">MAS INFO</button></div>
+                            <p>Este proyecto me dará la oportunidad de crear muchas de las funcions de backend que ocupo y requiero.</p>
+                            <p class="time">Última actualización 21/11/2022</p>
+                            <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/proyect_1_udemy_nicolas.html';">MAS INFO</button></div>
                         </div>
                         <div class="card">
                             
