--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
                 </section>
                 <!-- Bloque portfolio -->
                 <section id="cualidades">
-                    <h2>Cualidades</h2>
+                    <h2>Proyectos</h2>
                     <h3>Just a game👾</h3>
                     <div class="filaportfolio">
                         <div class="card">
                             <img src="./imagenes/giphy (1).gif" alt="">
-                            <h3>Protecto N</h3>
+                            <h3>Protecto <strong>N</strong></h3>
                             <h4>Aprende Javascript ES9, HTML, CSS3 y NodeJS desde cero</h4>
                             <div class="sep"></div>
                             <p>Este proyecto me dará la oportunidad de crear muchas de las funcions de backend que ocupo y requiero.</p>
                             <p class="time">Última actualización 21/11/2022</p>
-                            <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/proyect_1_udemy_nicolas.html';">MAS INFO</button></div>
+                            <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/proyect_n.html';">👉🏻</button></div>
                         </div>
                         <div class="card">
                             
