--- a/proyects/proyect_n.html
+++ b/proyects/proyect_n.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Likeos -->
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Proyect N</title>
 </head>
 <body>
-    
+    <article>
+        <nav>
+            <ul>
+                <li><a href="../index.html#aboutme">Sobre mi</a></li>
+                <li><a href="../index.html#cualidades">Proyectos</a></li>
+                <li id="logo"><a href="../index.html">👾</a></li>
+                <li><a href="../index.html#experiencia">Skils</a></li>
+                <li><a href="../index.html#contactar">Contactar</a></li>
+            </ul>
+        </nav>
+    </article>
 </body>
 </html>
