--- a/proyects/proyect_n.html
+++ b/proyects/proyect_n.html
@@ -9,16 +9,26 @@
     <title>Proyect N</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="../index.html#aboutme">Sobre mi</a></li>
+            <li><a href="../index.html#cualidades">Proyectos</a></li>
+            <li id="logo"><a href="../index.html">👾</a></li>
+            <li><a href="../index.html#experiencia">Skils</a></li>
+            <li><a href="../index.html#contactar">Contactar</a></li>
+        </ul>
+    </nav>
     <article>
-        <nav>
-            <ul>
-                <li><a href="../index.html#aboutme">Sobre mi</a></li>
-                <li><a href="../index.html#cualidades">Proyectos</a></li>
-                <li id="logo"><a href="../index.html">👾</a></li>
-                <li><a href="../index.html#experiencia">Skils</a></li>
-                <li><a href="../index.html#contactar">Contactar</a></li>
-            </ul>
-        </nav>
+        <section>
+            <p>Por favor llena este formulario para ponerte en contacto con nostros</p>
+            
+        </section>
+        <button onclick="addElement()">ADD</button>
+        <button onclick="removeElement()">DELETE</button>
+        <div id="container">
+            
+        </div>
     </article>
+    <script src="./test.js"></script>
 </body>
 </html>
