v.04 Integraci[on del proyecto Masterdots

--- a/index.html
+++ b/index.html
@@ -86,16 +86,17 @@
                         <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/proyect_n.html';">👉🏻</button></div>
                     </div>
                     <div class="proyect">
-                        
-                        <iframe width="250" src="https://www.youtube.com/embed/p8P6HR7tucE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <h3>musica</h3>
-                        <h4>concierto benicassim</h4>
+                        <img src="./img/711093.jpg" alt="Portfolio 3">
+                        <h3>Masterdots🔵</h3>
+                        <h4>FrontEnd</h4>
                         <div class="sep"></div>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                        <div class="masinfo"><button type="button">MAS INFO</button></div>
+                        <p>Estaremos viendo con el profe paco el frontend</p>
+                        <p class="time">Última actualización 24/11/2022</p>
+                        <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/Masterdots/masterdots_index.html';">MAS INFO</button></div>
                     </div>
                     <div class="proyect">
-                        <img src="./img/711093.jpg" alt="Portfolio 3">
+                        
+                        <iframe width="250" src="https://www.youtube.com/embed/p8P6HR7tucE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h3>musica</h3>
                         <h4>concierto benicassim</h4>
                         <div class="sep"></div>
