--- a/proyects/Masterdots/masterdots_index.html
+++ b/proyects/Masterdots/masterdots_index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master dots</title>
+    <title>Masterdots</title>
     <!-- Links -->
     <link rel="stylesheet" href="../../css/estilos.css">
+    <link rel="stylesheet" href="./css/styles.css">
+
 </head>
 <body>
     <nav>
@@ -20,7 +22,7 @@
     </nav>
     <article>
         <div>
-            
+            <h2>Masterdots</h2>
         </div>
     </article>
 </body>
