v.06 Integración de javascript de masterdots y la eliminación separo el css

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="sep"></div>
                         <p>Estaremos viendo con el profe paco el frontend</p>
                         <p class="time">Última actualización 24/11/2022</p>
-                        <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/Masterdots/masterdots_index.html';">MAS INFO</button></div>
+                        <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/Masterdots/masterdots_index.html';">👉🏻</button></div>
                     </div>
                     <div class="proyect">
                         
