v.08 Control publico de versiones

--- a/index.html
+++ b/index.html
@@ -211,7 +211,11 @@
         </section>
         <!-- Footer -->
         <footer>
-            <p>© 2021 Fernando Leon Franco</p>
+            <ul>
+                <li>Web version V .0️⃣8️⃣</li>
+                <li>Changes log 👇🏼</li>
+                <li>🔹Control publico de versiones</li>
+            </ul>
         </footer>  
         <script src="./js/main.js"></script>     
     </body>
