v.09 Validación en el login del proyecto Masterdots🔵

--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
         <!-- Footer -->
         <footer>
             <ul>
-                <li>Web version V .0️⃣8️⃣</li>
+                <li>Web version V .0️⃣9️⃣</li>
                 <li>Changes log 👇🏼</li>
-                <li>🔹Control publico de versiones</li>
+                <li>🔹Validación en el login del proyecto <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a></li>
             </ul>
         </footer>  
         <script src="./js/main.js"></script>     
