--- a/proyects/Masterdots/masterdots_index.html
+++ b/proyects/Masterdots/masterdots_index.html
@@ -19,7 +19,7 @@
     </header>
     <!-- FORMULARIO DEL USUARIO -->
     <main>
-        <form action="#">
+        <form action="juego.html" id="formEntrada">
             <div class="itemform">
                 <label for="nick">Introduce tu nick</label>
                 <input type="text" name="nick" value="@" id="nicka" readonly>
@@ -32,14 +32,14 @@
             <div class="itemform">
                 <label for="size">Tamano del juego</label>
                 <select name="size" id="size">
-                    <option value="">--Elije un tamaño--</option>
+                    <option value="0">--Elije un tamaño--</option>
                     <option value="1">4x4</option>
                     <option value="2">5x5</option>
                     <option value="3">6x6</option>
                 </select>
             </div>
             <div class="itemform">
-                <input type="submit" value="Jugar">
+                <input type="submit" value="Jugar" id="jugar">
             </div>
         </form>
     </main>
@@ -48,6 +48,6 @@
         <p>Curso FronEnd HTML, CSS Y JS</p>
     </footer>
     <!-- SCRIPTS -->
-    <script src="./js/app.js"></script>
+    <script src="./js/app.js" defer></script>
 </body>
 </html>
