v.10 -Display de error en un dato del formulario -Correcion de error en el id de correo que probocaba un valor null -Proximos cambios...🔜 (apis)

--- a/index.html
+++ b/index.html
@@ -212,9 +212,11 @@
         <!-- Footer -->
         <footer>
             <ul>
-                <li>Web version V .0️⃣9️⃣</li>
+                <li>Web version V .1️⃣0️⃣</li>
                 <li>Changes log 👇🏼</li>
-                <li>🔹Validación en el login del proyecto <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a></li>
+                <li>🔹Display de error en un dato del formulario <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a></li>
+                <li>🔹Correcion de error en el id de correo que probocaba un valor null </li>
+                <li>🔹Proximos cambios...🔜 (apis)</li>
             </ul>
         </footer>  
         <script src="./js/main.js"></script>     
